opam-version: "2.0"
name: "dkml-component-staging-opam64"
version: "2.1.0.msys2.12"
synopsis: "DKML component for 64-bit versions of opam"
description: """For 64-bit capable platforms, opam, opam-putenv and opam-installer will be in <share>/staging-files/<platform>.
But for any platform that does not support 64-bit, this package will install nothing (aka. be a no-op).
Consumers of the component should place both tools/opam64 and tools/opam32 into the PATH, so that whichever is available can be used."""
maintainer: ["opensource+diskuv-ocaml@support.diskuv.com"]
authors: ["Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>"]
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dkml-component-ocamlcompiler"
bug-reports: "https://github.com/diskuv/dkml-component-ocamlcompiler/issues"
depends: [
  "dkml-install"            {>= "0.1.0"}
  "dune"                    {>= "2.9"}
  "diskuvbox"               {>= "0.1.0" & build}
]
depopts: [
  "dkml-base-compiler"
  "ocaml-base-compiler"
  "conf-dkml-cross-toolchain"
  "dkml-option-32bit"
  "ocaml-option-32bit"
]
build-env: [
  [DKML_VER = "0.4.0"]
]
build: [
  # Opam source code
  ["install" "-d" "dl/opam"]
  ["tar" "xCfz" "dl/opam" "dl/opam.tar.gz" "--strip-components=1"]
  #   For macos, build arm64 as well using Dune cross-compilation
  ["diskuvbox" "copy-file" "assets/dune-workspace.macos" "dl/opam/dune-workspace"] { os = "macos" & conf-dkml-cross-toolchain:installed }

  # Create a DKMLDIR. Its structure mimics a git submodule setup.
  #   <dkmldir>/.dkmlroot
  ["install" "-d" "dkmldir"]
  ["sh" "-c" "printf 'dkml_root_version=%s\\n' \"$DKML_VER\" > dkmldir/.dkmlroot"]

  #   <dkmldir>/vendor/drc/
  ["install" "-d" "dkmldir/vendor/drc"]
  ["tar" "xCfz" "dkmldir/vendor/drc" "dl/dkml-runtime-common.tar.gz" "--strip-components=1"]

  #   <dkmldir>/vendor/drd/
  ["install" "-d" "dkmldir/vendor/drd"]
  ["tar" "xCfz" "dkmldir/vendor/drd" "dl/dkml-runtime-distribution.tar.gz" "--strip-components=1"]

  #   <dkmldir>/vendor/dkml-compiler/
  ["install" "-d" "dkmldir/vendor/dkml-compiler/src"]
  ["tar" "xCfz" "dkmldir/vendor/dkml-compiler" "dl/dkml-compiler.tar.gz" "--strip-components=1"]

  #   We won't build any Dune projects in the dkml-runtime-distribution
  ["diskuvbox" "copy-file" "assets/dune.exclude-all" "dkmldir/vendor/drd/dune"]

  # [DEVELOPERS]
  # Rapid iteration ... customize the build scripts as needed.
  # ["diskuvbox" "copy-file" "r-c-opam-2-build.sh" "dkmldir/vendor/drd/src/unix/private/r-c-opam-2-build.sh"]

  # Run r-c-opam-1-setup
  [
    "env" "TOPDIR=dkmldir/vendor/drc/all/emptytop"
      "dkmldir/vendor/drd/src/unix/private/r-c-opam-1-setup.sh"
      "-d" "dkmldir"
      "-t" "_w"
      "-v" "dl/opam"
      # Instead of letting Opam bootstrap its own OCaml compiler, we can just
      # tell it to use the OCaml home (ie. compiler in %{prefix}%/bin/ocamlc).
      # We don't have a "home" if ocaml-system is installed, but we do for
      # the base compilers. This will save time, reduce build errors and
      # dkml-base-compiler gives access to a cross compiler.
      "-c"          { ocaml-base-compiler:installed | dkml-base-compiler:installed }
      "%{prefix}%"  { ocaml-base-compiler:installed | dkml-base-compiler:installed }
      # Target ABIs
      # - If we are using a OCaml system or base compiler on Windows (rather
      #   than Opam bootstrapping its own, then we must match 32-bit OCaml
      #   compiler with 32-bit target ABI (ditto for 64-bit)
      # - Linux, since we are not going to mess with gcc-multilib on a zillion
      #   package managers, is just going to match the host architecture
      #   as reported by Opam's "arch" variable.
      "-awindows_x86_64"  { os = "win32" &
        ( (ocaml-base-compiler:installed & (!ocaml-option-32bit:installed | arch="x86_64"))
        | (dkml-base-compiler:installed & !dkml-option-32bit:installed)
        | (!ocaml-base-compiler:installed & !dkml-base-compiler:installed)
        ) }
      "-alinux_x86_64"    { os = "linux" & arch = "x86_64" }
      "-adarwin_x86_64"   { os = "macos" }
  ] { os = "macos" | (os = "linux" & arch = "x86_64") | (os = "win32" &
        ( (ocaml-base-compiler:installed & (!ocaml-option-32bit:installed | arch="x86_64"))
        | (dkml-base-compiler:installed & !dkml-option-32bit:installed)
        | (!ocaml-base-compiler:installed & !dkml-base-compiler:installed)
        ) ) }

  # Run r-c-opam-2-build-noargs.sh
  [
    "sh" "-eufc"
    "cd _w && DKML_BUILD_TRACE=ON DKML_BUILD_TRACE_LEVEL=2 share/dkml/repro/110co/vendor/drd/src/unix/private/r-c-opam-2-build-noargs.sh"
  ] { os = "macos" | (os = "linux" & arch = "x86_64") | (os = "win32" &
        ( (ocaml-base-compiler:installed & (!ocaml-option-32bit:installed | arch="x86_64"))
        | (dkml-base-compiler:installed & !dkml-option-32bit:installed)
        | (!ocaml-base-compiler:installed & !dkml-base-compiler:installed)
        ) ) }

  # --------------
  # Build install library
  # --------------

  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
install: [
  [
    "diskuvbox"
    "copy-file-into"
    "_w/bin/opam"
    "_w/bin/opam-installer"
    "%{_:share}%/staging-files/darwin_x86_64/bin"
  ] { os = "macos" }
  [
    "diskuvbox"
    "copy-file-into"
    "_w/src/opam/_build/install/default.darwin_arm64/bin/opam"
    "_w/src/opam/_build/install/default.darwin_arm64/bin/opam-installer"
    "%{_:share}%/staging-files/darwin_arm64/bin"
  ] { os = "macos" }
  [
    "diskuvbox"
    "copy-file-into"
    "_w/bin/opam"
    "_w/bin/opam-installer"
    "%{_:share}%/staging-files/linux_x86_64/bin"
  ] { (os = "linux" & arch = "x86_64") }
  [
    "diskuvbox"
    "copy-file-into"
    "_w/bin/opam.exe"
    "_w/bin/opam-installer.exe"
    "%{_:share}%/staging-files/windows_x86_64/bin"
  ] { os = "win32" &
        ( (ocaml-base-compiler:installed & (!ocaml-option-32bit:installed | arch="x86_64"))
        | (dkml-base-compiler:installed & !dkml-option-32bit:installed)
        | (!ocaml-base-compiler:installed & !dkml-base-compiler:installed)
        ) }

  [
    "diskuvbox"
    "copy-file-into"
    "_w/bin/opam-putenv.exe"
    "%{_:share}%/staging-files/windows_x86_64/bin"
  ] { os = "win32" &
        ( (ocaml-base-compiler:installed & (!ocaml-option-32bit:installed | arch="x86_64"))
        | (dkml-base-compiler:installed & !dkml-option-32bit:installed)
        | (!ocaml-base-compiler:installed & !dkml-base-compiler:installed)
        ) }

  [
    "diskuvbox"
    "copy-dir"
    "_w/share/man"
    "%{_:share}%/staging-files/generic/man"
  ] { os = "macos" | (os = "linux" & arch = "x86_64") | (os = "win32" &
        ( (ocaml-base-compiler:installed & (!ocaml-option-32bit:installed | arch="x86_64"))
        | (dkml-base-compiler:installed & !dkml-option-32bit:installed)
        | (!ocaml-base-compiler:installed & !dkml-base-compiler:installed)
        ) ) }
]
dev-repo: "git+https://github.com/diskuv/dkml-component-ocamlcompiler.git"
extra-source "dl/dkml-runtime-common.tar.gz" {
  # dkml-runtime-common can be less or equal to DKML_VER
  src: "https://github.com/diskuv/dkml-runtime-common/archive/refs/tags/v0.4.0-prerel19_r5.tar.gz"
  checksum: [
    "sha256=576effbcc9fb4b16d886c7531ddd3b809e9a275d2cc54633c009da859cc6d24b"
  ]
}
extra-source "dl/dkml-runtime-distribution.tar.gz" {
  # dkml-runtime-distribution can be less or equal to DKML_VER
  src: "https://github.com/diskuv/dkml-runtime-distribution/archive/refs/tags/v0.4.0-prerel19_r17.tar.gz"
  checksum: [
    "sha256=02f3893c4c9639e0b364f0aea9134c5a443eea360434bfaab890622773804f5b"
  ]
}
extra-source "dl/dkml-compiler.tar.gz" {
  # dkml-compiler can be less or equal to DKML_VER
  src: "https://github.com/diskuv/dkml-compiler/archive/refs/tags/v4.12.1-prerel10.tar.gz"
  checksum: [
    "md5=f43157a664e6966bf3f3433b2d57fb68"
    "sha256=f24c013a014dfa91c003ce0d6aeba5df464bc523b31ac4a6f34990768d74acad"
  ]
}
extra-source "dl/opam.tar.gz" {
  src: "https://github.com/diskuv/opam/archive/refs/tags/2.1.0.msys2.12.tar.gz"
  checksum: [
    "sha256=2c03224f98ac2dcc814a0f6e855882b21953f4f5f2e06c07856c71b33f3342cf"
  ]
}

# -------------------
# BEGIN OPAM ARCHIVES
#
# Since we don't have network access in sandboxes, we can't let `make -C src_ext cache-archives`
# actual download. Use extra-source instead.
#
# The rest is autogenerated within dl/opam using:
#   join <(awk '$1~/^URL_[a-z]/{sub(/URL_/,"",$1); print $1,"URL",$NF}' src_ext/Makefile src_ext/Makefile.sources) <(awk '$1~/^MD5_[a-z]/{sub(/MD5_/,"",$1); print $1,"MD5",$NF}' src_ext/Makefile src_ext/Makefile.sources) | awk -v dq='"' '$2=="URL" && $4=="MD5"{name=$3; sub(".*/", "",name); printf "extra-source %sdl/opam/src_ext/archives/%s%s {\n  src: %s%s%s\n  checksum: [\n    %smd5=%s%s\n  ]\n}\n", dq,name,dq, dq,$3,dq, dq,$5,dq }'

extra-source "dl/opam/src_ext/archives/ocaml-4.12.0.tar.gz" {
  src: "https://caml.inria.fr/pub/distrib/ocaml-4.12/ocaml-4.12.0.tar.gz"
  checksum: [
    "md5=0863b31da0ab8ef67c5b723206f494da"
  ]
}
extra-source "dl/opam/src_ext/archives/0.39.tar.gz" {
  src: "https://github.com/alainfrisch/flexdll/archive/0.39.tar.gz"
  checksum: [
    "md5=c8493c7b6e95c4763b89213a9a710af5"
  ]
}
extra-source "dl/opam/src_ext/archives/cppo-v1.6.7.tbz" {
  src: "https://github.com/ocaml-community/cppo/releases/download/v1.6.7/cppo-v1.6.7.tbz"
  checksum: [
    "md5=65c668196c3dabf34d9e887952e5bbb4"
  ]
}
extra-source "dl/opam/src_ext/archives/extlib-1.7.7.tar.gz" {
  src: "https://ygrek.org/p/release/ocaml-extlib/extlib-1.7.7.tar.gz"
  checksum: [
    "md5=2c620993aecd4b31b3a362b21b55dd94"
  ]
}
extra-source "dl/opam/src_ext/archives/re-1.9.0.tbz" {
  src: "https://github.com/ocaml/ocaml-re/releases/download/1.9.0/re-1.9.0.tbz"
  checksum: [
    "md5=bddaed4f386a22cace7850c9c7dac296"
  ]
}
extra-source "dl/opam/src_ext/archives/cmdliner-1.0.4.tbz" {
  src: "http://erratique.ch/software/cmdliner/releases/cmdliner-1.0.4.tbz"
  checksum: [
    "md5=fe2213d0bc63b1e10a2d0aa66d2fc8d9"
  ]
}
extra-source "dl/opam/src_ext/archives/ocamlgraph-2.0.0.tbz" {
  src: "https://github.com/backtracking/ocamlgraph/releases/download/2.0.0/ocamlgraph-2.0.0.tbz"
  checksum: [
    "md5=2d07fcf3501e1d4997c03fa94cea22f0"
  ]
}
extra-source "dl/opam/src_ext/archives/cudf-0.9.tar.gz" {
  src: "https://github.com/ocaml/opam-source-archives/raw/main/cudf-0.9.tar.gz"
  checksum: [
    "md5=a4c0e652e56e74c7b388a43f9258d119"
  ]
}
extra-source "dl/opam/src_ext/archives/dose3-5.0.1.tar.gz" {
  src: "https://github.com/ocaml/opam-source-archives/raw/main/dose3-5.0.1.tar.gz"
  checksum: [
    "md5=e7d4b1840383c6732f29a47c08ba5650"
  ]
}
extra-source "dl/opam/src_ext/archives/1.1+13.tar.gz" {
  src: "https://github.com/AltGr/ocaml-mccs/archive/1.1+13.tar.gz"
  checksum: [
    "md5=13504d3b5dcbf0bdc6d95a62de20af4a"
  ]
}
extra-source "dl/opam/src_ext/archives/opam-0install-cudf-v0.4.2.tbz" {
  src: "https://github.com/ocaml-opam/opam-0install-solver/releases/download/v0.4.2/opam-0install-cudf-v0.4.2.tbz"
  checksum: [
    "md5=8e1494e8b97fc6f9a463966c394e9bdd"
  ]
}
extra-source "dl/opam/src_ext/archives/0install-v2.17.tbz" {
  src: "https://github.com/0install/0install/releases/download/v2.17/0install-v2.17.tbz"
  checksum: [
    "md5=50daf035b04b29399a3c6e6f965ac447"
  ]
}
extra-source "dl/opam/src_ext/archives/2.1.3.tar.gz" {
  src: "https://github.com/ocaml/opam-file-format/archive/2.1.3.tar.gz"
  checksum: [
    "md5=b805562dd2d86fc3c8e6d47884fd1da6"
  ]
}
extra-source "dl/opam/src_ext/archives/result-1.5.tbz" {
  src: "https://github.com/janestreet/result/releases/download/1.5/result-1.5.tbz"
  checksum: [
    "md5=1b82dec78849680b49ae9a8a365b831b"
  ]
}
extra-source "dl/opam/src_ext/archives/dune-2.9.0.tbz" {
  src: "https://github.com/ocaml/dune/releases/download/2.9.0/dune-2.9.0.tbz"
  checksum: [
    "md5=90a12dc2a312df699533cbe7d18ece11"
  ]
}
extra-source "dl/opam/src_ext/archives/findlib-1.9.1.tar.gz" {
  src: "http://download.camlcity.org/download/findlib-1.9.1.tar.gz"
  checksum: [
    "md5=65e6dc9b305ccbed1267275fe180f538"
  ]
}
extra-source "dl/opam/src_ext/archives/0.14.0.tar.gz" {
  src: "https://github.com/ocaml/ocamlbuild/archive/0.14.0.tar.gz"
  checksum: [
    "md5=a7bf2fe594cd16907807c756b14d501f"
  ]
}
extra-source "dl/opam/src_ext/archives/topkg-1.0.3.tbz" {
  src: "http://erratique.ch/software/topkg/releases/topkg-1.0.3.tbz"
  checksum: [
    "md5=e285f7a296d77ee7d831ba9a6bfb396f"
  ]
}
extra-source "dl/opam/src_ext/archives/0.2.2.tar.gz" {
  src: "https://github.com/c-cube/seq/archive/0.2.2.tar.gz"
  checksum: [
    "md5=9033e02283aa3bde9f97f24e632902e3"
  ]
}
extra-source "dl/opam/src_ext/archives/stdlib-shims-0.3.0.tbz" {
  src: "https://github.com/ocaml/stdlib-shims/releases/download/0.3.0/stdlib-shims-0.3.0.tbz"
  checksum: [
    "md5=09db7af8b4a3a96048a61cb6ae2496ef"
  ]
}

# END OPAM ARCHIVES
# -------------------
